Set search field font size to 16px on mobile to prevent zooming

--- a/app/assets/stylesheets/trestle/search.scss
+++ b/app/assets/stylesheets/trestle/search.scss
@@ -43,6 +43,7 @@
 
     .form-control {
       border-bottom: none;
+      font-size: 16px;
     }
   }
 }
